# vibenet

./: .gitignore  README.md  pyproject.toml
beetsplug/: vibenet.py
notebooks/: data.ipynb  distillation.ipynb  pretrained_pann.ipynb  pretrained_pann_train.ipynb  pretrained_vggish.ipynb  pretrained_vggish_lstm.ipynb
scripts/: export_model.py  generate_lossless_audio_test_fixtures.py  isolate_echonest.py  label_waveforms.py  preprocess_vggish.py  preprocess_waveforms.py  train_test_split_distill.py  train_test_split_tracks.py
tests/: test_vibenet_io.py
tests/data_fixtures/audio/: test_lossless_audio.flac
vibenet/: __init__.py  backends.py  cli.py  core.py  dataset.py  train_utils.py  utils.py
vibenet/models/: student.py  teacher.py
vibenet/train/: train_utils.py
